--- a/index.html
+++ b/index.html
@@ -58,15 +58,22 @@
             <div class="character">
                 <h2>Louise the Explorer</h2>
                 <img src="dora_explorer.png" alt="Dora the Explorer">
+                <p>stats: söt 10, gymmar ofta (str 10), explores</p>
             </div>
                 <!-- Heart emoji with css for 148 font size-->
                 <h2 style="font-size: 1200%;">💖</h2>
             <div class="character">
                 <h2>Mark lab assistant</h2>
                 <img src="carl_wheezer.jpg" alt="Carl Wheezer">
+                <p>gillar också gym och friluftsliv</p>
             </div>
         </div>
         <p style="font-size: x-large;">Vissa säger att världen är liten, men jag håller inte med för annars borde jag träffat dig tidigare 😤</p>
+        <img src="forest0.png" style="width: 20%;">
+        <img src="mountain0.png" style="width: 20%;">
+        <img src="mountain1.png" style="width: 20%;">
+        <img src="forest0.png" style="width: 20%;">
+        <img src="picnic0.png" style="width: 50%;">
     </main>
 
 </body>
